# foxhole-quartermaster

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MIGRATION-RBAC.md  db_backup.sql  db_data.sql  deploy-k8s.sh  deploy.sh  docker-compose.yml  foxhole-quartermaster.service  next.config.mjs  next.config.ts  package.json  sentry.edge.config.ts  sentry.server.config.ts  start.sh  stop.sh  tailwind.config.ts  tsconfig.json  tsconfig.test.json
discord-bot/: .gitignore  README.md  package.json  start-bot.sh  stop-bot.sh  tsconfig.json
discord-bot-python/: .env.example  Dockerfile  README.md  pyproject.toml  start-bot.sh  stop-bot.sh
discord-bot-python/src/: __init__.py  config.py  main.py
discord-bot-python/src/ai/: __init__.py  agent.py  gemini.py  prompts.py
discord-bot-python/src/discord_bot/: __init__.py  client.py  message_handler.py  scanner_handler.py
discord-bot-python/src/discord_bot/commands/: __init__.py  help.py  inventory.py  operations.py  production.py  stats.py  stockpiles.py
discord-bot-python/src/mcp/: __init__.py  client.py
discord-bot-python/src/utils/: logger.py
k8s/chart/: Chart.yaml  (+3 more)
mcp-server/: .env.example  Dockerfile  README.md  pyproject.toml
mcp-server/src/: __init__.py  config.py  main.py  server.py
mcp-server/src/db/: __init__.py  engine.py  session.py
mcp-server/src/db/models/: __init__.py  base.py  item.py  operation.py  production.py  regiment.py  role.py  stockpile.py  user.py
mcp-server/src/foxhole/: __init__.py  formatters.py  items.py
mcp-server/src/tools/: __init__.py  inventory.py  operations.py  production.py  scanner.py  stats.py  stockpiles.py
mcp-server/src/utils/: logger.py
prisma/: schema.prisma
scanner/: Dockerfile
scripts/: add-view-permissions.ts  backfill-short-ids.ts  migrate-rbac.ts
src/: instrumentation-client.ts  instrumentation.ts  middleware.ts  proxy.ts
(+190 files in other folders)
